2005-07-07  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: Compute correctly the draw:viewBox to
	please some versions of OpenOffice.org

2005-07-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PeopleModel.py (calculate_data): Fix invert of search result
	* src/Date.py (is_equal): Only compare text value for TEXTONLY dates.
	* src/GenericFilter.py: Add new filters to search for notes
	* src/gramps_main.py: Add new filters

2005-07-05  Alex Roitman  <shura@gramps-project.org>
	* src/system_filters.xml: Remove testing contents.
	* src/EditPerson.py (__init__): Refresh person object from handle,
	if handle exists.
	* src/Marriage.py (__init__): Refresh family object from handle,
	if handle exists.
	* NEWS: Update.
	* configure.in: Bump up the release number.

	* Release: Version 2.0.5 "It's certainly uncontaminated by cheese"
	released.
	* configure.in: Bump up the version number.

2005-07-03  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py (dump_person): Correctly test for birth
	relations.

2005-07-03  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Updated translated to latest template

2005-07-02  Alexander Roitman  <shura@gramps-project.org>
	* src/RelLib.py (Family.get_handle_referents): Typo;
	(Event.get_handle_referents): Work around possible None for
	witness. 
	* src/plugins/Check.py (check_source_references): Add checking
	routine to detect and remove dangling source references.
	* configure.in: Bump up the version number.

2005-07-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/WebPage.py (write_sibling): Apply patch from bug #
	1230430 at sf.net with minor tweaks.
	* src/NEWS: Update.

2005-06-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbBase.py: don't count_person for gender stats on 
	add_person, since already done it commit_person

2005-06-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/DumpGenderStats.py: New plugin for debugging
